--- a/style.css
+++ b/style.css
@@ -122,6 +122,10 @@ footer{
   padding: 20px;
   color: aliceblue;
 }
+::selection{
+  background-color: blue;
+  color: yellow;
+}
 @media screen and (max-width: 768px){
   nav{
       margin-left: -20px;
